hydroflow/tests/compile-fail/surface_singleton_undefined.stderr
error: Cannot find referenced name `unknown`; name was never assigned.
 --> tests/compile-fail/surface_singleton_undefined.rs:5:40
  |
5 |             -> filter(|value| value <= #unknown.as_reveal_ref())
  |                                        ^^^^^^^^
